terraform/aws/modules/ecs-app/main.tf
resource "aws_ecs_cluster" "cluster" {
  name = "${local.identifier}"
}

output "cluster_id" {
  value = "${aws_ecs_cluster.cluster.id}"
}

resource "aws_ecs_task_definition" "cluster" {
  family                = "${local.identifier}"
  container_definitions = "${var.task_definition}"
  execution_role_arn    = "${aws_iam_role.execution.arn}"
  task_role_arn         = "${aws_iam_role.task.arn}"
  network_mode          = "bridge"
}

output "task_role_name" {
  value = "${aws_iam_role.task.name}"
}

resource "aws_ecs_service" "cluster" {
  name            = "${local.identifier}"
  cluster         = "${aws_ecs_cluster.cluster.id}"
  task_definition = "${aws_ecs_task_definition.cluster.arn}"

  desired_count                      = "${var.number_of_tasks}"
  deployment_minimum_healthy_percent = "${var.deployment_min_healthy_percent}"
  deployment_maximum_percent         = "${var.deployment_max_percent}"

  load_balancer {
    target_group_arn = "${aws_lb_target_group.task.arn}"
    container_name   = "${var.container_name}"
    container_port   = "${var.container_port}"
  }
}
